<resources>
    <string name="APP_CODE">xinfengyang</string>
    <string name="IMAGE_BASE_URL">https://xfyfile.xhkjedu.com</string>
    <string name="SCHOOL_URL">https://xfyapi.xhkjedu.com</string>
    <string name="SHOW_IMAGE_BASE_URL">https://xfystatic.xhkjedu.com</string>
    <string name="SHOW_IMAGE_URL">https://xfystatic.xhkjedu.com/static/</string>
    <string name="SHOW_VIDEO_BASE_URL">https://xfyrecstatic.xhkjedu.com</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accMes">账号信息</string>
    <string name="agora_access_token">006b1b07f9eeb2444d0b7ff2205e072b973IACbRA1jyQudeTPoE658uYUGXbvjI42jJ2/EdsmUxjDOxQx+f9gAAAAAEAAH/YchGIQRYAEAAQAahBFg</string>
    <string name="all_item0">我的作业</string>
    <string name="all_item1">学生预习</string>
    <string name="all_item2">同步视频</string>
    <string name="alphabet_and_number">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="analysis">解析</string>
    <string name="answerCard">答题卡</string>
    <string name="app_name">星火智慧校园</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="awaitRead">待批阅作业</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brightness">亮度</string>
    <string name="brightset">亮度设置</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chexiaoshouquan">撤销授权</string>
    <string name="chip_text">Chip text</string>
    <string name="cleancache">清空缓存</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clickRecite">点击开始背诵</string>
    <string name="commitAll">提交试卷</string>
    <string name="commitCase">提交情况</string>
    <string name="commitSt">提交该题</string>
    <string name="congratulation">恭喜您，被点到名字!</string>
    <string name="dkplayer_continue_play">继续播放</string>
    <string name="dkplayer_error_message">出了点小问题，请稍后重试</string>
    <string name="dkplayer_lock_tip">请先解锁屏幕！</string>
    <string name="dkplayer_locked">已锁定</string>
    <string name="dkplayer_replay">重新播放</string>
    <string name="dkplayer_retry">重 试</string>
    <string name="dkplayer_unlocked">已解锁</string>
    <string name="dkplayer_wifi_tip">您正在使用移动网络，继续播放将消耗流量</string>
    <string name="dump">跳过</string>
    <string name="error_icon_content_description">Error</string>
    <string name="errors">错题</string>
    <string name="et_lt">快来评论互动吧...</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fgh_mask_bottom">Scroll to move handle</string>
    <string name="fgh_mask_top_pull">Pull To Break Out!</string>
    <string name="fgh_mask_top_release">Release To Break Out!</string>
    <string name="fgh_text_game_over">Game Over</string>
    <string name="fgh_text_loading">Refreshing…</string>
    <string name="fgh_text_loading_failed">Refreshing Failed</string>
    <string name="fgh_text_loading_finish">Refreshing Finished</string>
    <string name="finishRecite">完成</string>
    <string name="forgetPw">忘记密码?</string>
    <string name="get_smscode">获取验证码</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="homeBot1">应用</string>
    <string name="homeBot2">资讯</string>
    <string name="homeBot3">商城</string>
    <string name="homeBot4">我的</string>
    <string name="hy">护眼模式</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="isCommit">已提交</string>
    <string name="item_view_role_description">Tab</string>
    <string name="language">语文</string>
    <string name="loginBut">立即登录</string>
    <string name="loginPhone_hint">请输入您的账号</string>
    <string name="loginPw_hint">请输入6-16位密码</string>
    <string name="login_tit">智慧校园</string>
    <string name="macAddress">Mac地址:</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="meIcon">我的头像</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="myClass">我的班级</string>
    <string name="myName">我的姓名</string>
    <string name="mySchool">我的学校</string>
    <string name="nb.fragment.book_list.collect">最多收藏</string>
    <string name="nb.fragment.book_list.hot">本周最热</string>
    <string name="nb.fragment.book_list.newest">最新发布</string>
    <string name="nb_bookshelf_book_not_exist">文件不存在或者内容为空,是否删除?</string>
    <string name="nb_common_cancel">取消</string>
    <string name="nb_common_sure">确定</string>
    <string name="nb_common_tip">提示</string>
    <string name="nb_download_complete">已完成</string>
    <string name="nb_download_error">错误</string>
    <string name="nb_download_finish">完成</string>
    <string name="nb_download_loading">下载中</string>
    <string name="nb_download_pause">暂停</string>
    <string name="nb_download_pausing">暂停中</string>
    <string name="nb_download_progress">%1$d/%2$d</string>
    <string name="nb_download_source_error">资源或网络错误</string>
    <string name="nb_download_start">继续</string>
    <string name="noCommit">未提交</string>
    <string name="no_sms">收不到验证码?</string>
    <string name="readOver">已批阅</string>
    <string name="refresh">刷新</string>
    <string name="remarkText">备注：点击学生名单进入批阅</string>
    <string name="ret">返回</string>
    <string name="sms_login">验证码登录</string>
    <string name="sms_loginPhone">手机号</string>
    <string name="startCamera">点击拍照上传</string>
    <string name="unRead">未批阅</string>
    <string name="updPs">更改密码</string>
</resources>