<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/smsFlayout" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/sp_25" android:textColor="@color/txt_hei" android:id="@id/smsTit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_40" android:text="@string/sms_login" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <EditText android:textSize="@dimen/sp_15" android:textColor="@color/main_text" android:textColorHint="@color/hintC" android:id="@id/sPhone" android:background="@drawable/smslogin_item" android:paddingTop="@dimen/dp_11" android:paddingBottom="@dimen/dp_11" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_40" android:maxWidth="@dimen/dp_310" android:hint="@string/sms_loginPhone" android:maxLines="1" android:maxLength="11" android:inputType="phone" android:paddingStart="@dimen/dp_19" android:paddingEnd="@dimen/dp_19" android:layout_marginStart="@dimen/dp_30" android:layout_marginEnd="@dimen/dp_30" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/smsTit" />
    <LinearLayout android:id="@id/smsCodeLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_23" android:maxWidth="@dimen/dp_310" android:layout_marginStart="@dimen/dp_30" android:layout_marginEnd="@dimen/dp_30" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/sPhone">
        <EditText android:textSize="@dimen/sp_15" android:textColor="@color/main_text" android:textColorHint="@color/hintC" android:ellipsize="end" android:id="@id/smsCode" android:background="@drawable/smslogin_item" android:paddingTop="@dimen/dp_11" android:paddingBottom="@dimen/dp_11" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/loginPw_hint" android:maxLines="1" android:maxLength="6" android:layout_weight="2.0" android:inputType="number" android:paddingStart="@dimen/dp_19" android:paddingEnd="@dimen/dp_19" />
        <TextView android:textSize="@dimen/sp_14" android:textColor="@color/white" android:gravity="center" android:id="@id/getCode" android:background="@drawable/login_but" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/dp_10" android:text="@string/get_smscode" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:textSize="@dimen/sp_18" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/lgBut" android:background="@drawable/login_but" android:paddingTop="@dimen/dp_10" android:paddingBottom="@dimen/dp_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_28" android:maxWidth="@dimen/dp_270" android:text="@string/loginBut" android:layout_marginStart="@dimen/dp_30" android:layout_marginEnd="@dimen/dp_30" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/smsCodeLayout" />
    <TextView android:textSize="@dimen/sp_13" android:textColor="@color/txt_gray" android:id="@id/noSmsCode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_13" android:text="@string/no_sms" app:layout_constraintRight_toRightOf="@id/lgBut" app:layout_constraintTop_toBottomOf="@id/lgBut" />
</androidx.constraintlayout.widget.ConstraintLayout>