<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:paddingLeft="@dimen/dp_11" android:paddingRight="@dimen/dp_9" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/sp_13" android:textColor="@color/txt_hei" android:id="@id/thisTit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/answerCard" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/thisTit" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="@id/thisTit">
        <View android:background="@color/dtCardO" android:layout_width="@dimen/dp_6" android:layout_height="@dimen/dp_6" />
        <TextView android:textSize="@dimen/sp_9" android:textColor="@color/txt_whei" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_3" android:text="@string/noCommit" />
        <View android:background="@color/logBut" android:layout_width="@dimen/dp_6" android:layout_height="@dimen/dp_6" android:layout_marginLeft="@dimen/dp_5" />
        <TextView android:textSize="@dimen/sp_9" android:textColor="@color/txt_whei" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_3" android:text="@string/readOver" />
        <View android:background="@color/dtCardT" android:layout_width="@dimen/dp_6" android:layout_height="@dimen/dp_6" android:layout_marginLeft="@dimen/dp_5" />
        <TextView android:textSize="@dimen/sp_9" android:textColor="@color/txt_whei" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_3" android:text="@string/unRead" />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/bg_fg_white" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="@dimen/dp_9" android:layout_marginBottom="@dimen/dp_8" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/thisTit">
        <androidx.recyclerview.widget.RecyclerView android:id="@id/studyAll" android:paddingLeft="@dimen/dp_5" android:paddingTop="@dimen/dp_8" android:paddingRight="@dimen/dp_5" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:spanCount="6" style="@style/ScrollNoShadow" />
        <TextView android:textSize="@dimen/sp_9" android:textColor="@color/comBotHint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_9" android:layout_marginBottom="@dimen/dp_10" android:text="@string/remarkText" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>