<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:paddingLeft="@dimen/dp_12" android:paddingRight="@dimen/dp_10" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/goCamera" android:background="@color/wlback" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="@dimen/dp_12" android:layout_marginBottom="@dimen/dp_20" app:layout_constraintBottom_toTopOf="@id/botRelative" app:layout_constraintHorizontal_bias="0.761" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent">
            <View android:id="@id/cameraIcon" android:background="@drawable/d_camera" android:layout_width="@dimen/dp_56" android:layout_height="@dimen/dp_50" android:layout_marginTop="@dimen/dp_40" />
            <TextView android:textSize="@dimen/sp_12" android:textColor="@color/txt_gray" android:id="@id/cameraTit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:layout_marginBottom="@dimen/dp_50" android:text="@string/startCamera" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/cameraIcon" />
        </LinearLayout>
        <ImageView android:id="@id/ivPz" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="0.0dip" android:scaleType="fitCenter" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout android:id="@id/botRelative" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dp_10" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent">
        <TextView android:textSize="@dimen/sp_12" android:textColor="@color/txt_u" android:id="@id/refreshJd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dp_10" android:text="@string/refresh" android:drawableTop="@drawable/but_refresh" android:layout_alignParentLeft="true" android:layout_centerVertical="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" />
        <TextView android:textSize="@dimen/sp_12" android:textColor="@color/txt_u" android:id="@id/dumpJd" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_10" android:layout_marginBottom="@dimen/dp_10" android:text="@string/dump" android:drawableTop="@drawable/but_dump" android:layout_toRightOf="@id/refreshJd" android:layout_centerVertical="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toRightOf="@id/refresh" />
        <TextView android:textSize="@dimen/sp_17" android:textColor="@color/white" android:id="@id/commitSt" android:background="@drawable/bg_workhome_but" android:paddingLeft="@dimen/dp_45" android:paddingTop="@dimen/dp_9" android:paddingRight="@dimen/dp_42" android:paddingBottom="@dimen/dp_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/commitSt" android:layout_alignParentRight="true" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>