<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/wlback" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/topABar" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="@dimen/sp_12" android:textColor="@color/logBut" android:id="@id/retA" android:paddingLeft="@dimen/dp_13" android:paddingTop="@dimen/dp_14" android:paddingBottom="@dimen/dp_11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ret" android:drawableLeft="@drawable/w_ret" android:drawablePadding="@dimen/dp_2" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/txt_hei" android:id="@id/topTit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/answerCard" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <View android:id="@id/aDtCard" android:background="@drawable/d_dtcard" android:layout_width="@dimen/dp_15" android:layout_height="@dimen/dp_17" android:layout_marginRight="@dimen/dp_9" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout android:orientation="vertical" android:background="@drawable/bg_fg_white" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_margin="@dimen/dp_8" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/topABar">
        <TextView android:textSize="@dimen/sp_15" android:textColor="@color/txt_hei" android:gravity="center_horizontal" android:id="@id/AcTit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_12" android:layout_marginBottom="@dimen/dp_5" style="@style/singleText" />
        <androidx.recyclerview.widget.RecyclerView android:layout_gravity="center_horizontal" android:id="@id/AcGrid" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" app:spanCount="7" style="@style/ScrollNoShadow" />
        <Button android:textSize="@dimen/sp_15" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@id/commitA" android:background="@drawable/bg_workhome_but" android:paddingLeft="@dimen/dp_80" android:paddingRight="@dimen/dp_80" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dp_10" android:text="@string/commitAll" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>